--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.12",
