--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "slugify": "^1.6.6"
   }
